--- a/01-Basic/02-OpenAI-LLM.ipynb
+++ b/01-Basic/02-OpenAI-LLM.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3bf28f9e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:44:14.458505Z",
-     "start_time": "2024-09-20T06:44:14.438097Z"
+     "end_time": "2024-09-22T01:16:16.198968300Z",
+     "start_time": "2024-09-22T01:16:16.135888600Z"
     }
    },
    "outputs": [
@@ -15,7 +15,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "93ac45ce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:44:15.464544Z",
-     "start_time": "2024-09-20T06:44:15.454100Z"
+     "end_time": "2024-09-22T01:16:16.198968300Z",
+     "start_time": "2024-09-22T01:16:16.154613300Z"
     }
    },
    "outputs": [
@@ -90,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5fc161c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:44:23.883223Z",
-     "start_time": "2024-09-20T06:44:19.603437Z"
+     "end_time": "2024-09-22T01:16:19.463472800Z",
+     "start_time": "2024-09-22T01:16:16.167597200Z"
     }
    },
    "outputs": [
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[답변]: content='대한민국의 수도는 서울특별시입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 중요한 역할을 하고 있습니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 16, 'total_tokens': 47, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_e375328146', 'finish_reason': 'stop', 'logprobs': None} id='run-54083e0b-7d7e-407d-b6be-20efe18ee6ce-0' usage_metadata={'input_tokens': 16, 'output_tokens': 31, 'total_tokens': 47}\n"
+      "[답변]: content='대한민국의 수도는 서울특별시입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 중요한 역할을 하고 있습니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 16, 'total_tokens': 47, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_e375328146', 'finish_reason': 'stop', 'logprobs': None} id='run-0163499d-5fc3-413e-874a-47ca91a6e5de-0' usage_metadata={'input_tokens': 16, 'output_tokens': 31, 'total_tokens': 47}\n"
      ]
     }
    ],
@@ -133,12 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2af58a9a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:45:06.945127Z",
-     "start_time": "2024-09-20T06:45:06.227530Z"
+     "end_time": "2024-09-22T01:16:20.528109500Z",
+     "start_time": "2024-09-22T01:16:19.473580200Z"
     }
    },
    "outputs": [],
@@ -152,26 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "24ecdeb9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:52:18.256740Z",
-     "start_time": "2024-09-20T06:52:18.251139Z"
+     "end_time": "2024-09-22T01:16:31.900514500Z",
+     "start_time": "2024-09-22T01:16:31.882965500Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": "AIMessage(content='대한민국의 수도는 서울입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 많은 인구와 다양한 명소를 자랑하는 도시입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 36, 'prompt_tokens': 16, 'total_tokens': 52, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_52a7f40b0b', 'finish_reason': 'stop', 'logprobs': None}, id='run-a81c6e79-1340-451b-9270-c5c48a194168-0', usage_metadata={'input_tokens': 16, 'output_tokens': 36, 'total_tokens': 52})"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='대한민국의 수도는 서울특별시입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 중요한 역할을 하고 있습니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 16, 'total_tokens': 47, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_3537616b13', 'finish_reason': 'stop', 'logprobs': None} id='run-1c43e192-e346-4fec-8aae-fcd5594e3418-0' usage_metadata={'input_tokens': 16, 'output_tokens': 31, 'total_tokens': 47}\n"
+     ]
     }
    ],
    "source": [
-    "response"
+    "print(response)"
    ]
   },
   {
@@ -259,12 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "fe733438",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:58:41.708761Z",
-     "start_time": "2024-09-20T06:58:41.111657Z"
+     "end_time": "2024-09-22T01:19:01.847192500Z",
+     "start_time": "2024-09-22T01:19:01.226837300Z"
     }
    },
    "outputs": [],
@@ -279,12 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "8ae2d627",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:58:42.435550Z",
-     "start_time": "2024-09-20T06:58:41.736494Z"
+     "end_time": "2024-09-22T01:19:02.606989400Z",
+     "start_time": "2024-09-22T01:19:01.854528400Z"
     }
    },
    "outputs": [],
@@ -301,9 +300,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "AIMessage(content='대한민국의 수도는 서울입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 24, 'total_tokens': 39, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': {'content': [{'token': '대', 'bytes': [235, 140, 128], 'logprob': -0.022705365, 'top_logprobs': []}, {'token': '한', 'bytes': [237, 149, 156], 'logprob': -3.1281633e-07, 'top_logprobs': []}, {'token': '\\\\xeb\\\\xaf', 'bytes': [235, 175], 'logprob': -1.7432603e-06, 'top_logprobs': []}, {'token': '\\\\xbc', 'bytes': [188], 'logprob': 0.0, 'top_logprobs': []}, {'token': '\\\\xea\\\\xb5', 'bytes': [234, 181], 'logprob': -1.9361265e-07, 'top_logprobs': []}, {'token': '\\\\xad', 'bytes': [173], 'logprob': 0.0, 'top_logprobs': []}, {'token': '의', 'bytes': [236, 157, 152], 'logprob': -4.246537e-06, 'top_logprobs': []}, {'token': ' 수', 'bytes': [32, 236, 136, 152], 'logprob': -6.704273e-07, 'top_logprobs': []}, {'token': '도', 'bytes': [235, 143, 132], 'logprob': -3.1281633e-07, 'top_logprobs': []}, {'token': '는', 'bytes': [235, 138, 148], 'logprob': -1.9361265e-07, 'top_logprobs': []}, {'token': ' 서', 'bytes': [32, 236, 132, 156], 'logprob': -3.4121115e-06, 'top_logprobs': []}, {'token': '\\\\xec\\\\x9a', 'bytes': [236, 154], 'logprob': 0.0, 'top_logprobs': []}, {'token': '\\\\xb8', 'bytes': [184], 'logprob': 0.0, 'top_logprobs': []}, {'token': '입니다', 'bytes': [236, 158, 133, 235, 139, 136, 235, 139, 164], 'logprob': -0.15005663, 'top_logprobs': []}, {'token': '.', 'bytes': [46], 'logprob': -3.4121115e-06, 'top_logprobs': []}], 'refusal': None}}, id='run-a3e1881f-04f8-459f-9d57-f6f265eb6d8a-0', usage_metadata={'input_tokens': 24, 'output_tokens': 15, 'total_tokens': 39})"
+      "text/plain": "AIMessage(content='대한민국의 수도는 서울입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 24, 'total_tokens': 39, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': {'content': [{'token': '대', 'bytes': [235, 140, 128], 'logprob': -0.047983073, 'top_logprobs': []}, {'token': '한', 'bytes': [237, 149, 156], 'logprob': -1.9361265e-07, 'top_logprobs': []}, {'token': '\\\\xeb\\\\xaf', 'bytes': [235, 175], 'logprob': -1.6240566e-06, 'top_logprobs': []}, {'token': '\\\\xbc', 'bytes': [188], 'logprob': 0.0, 'top_logprobs': []}, {'token': '\\\\xea\\\\xb5', 'bytes': [234, 181], 'logprob': -3.1281633e-07, 'top_logprobs': []}, {'token': '\\\\xad', 'bytes': [173], 'logprob': 0.0, 'top_logprobs': []}, {'token': '의', 'bytes': [236, 157, 152], 'logprob': -4.4849444e-06, 'top_logprobs': []}, {'token': ' 수', 'bytes': [32, 236, 136, 152], 'logprob': -6.704273e-07, 'top_logprobs': []}, {'token': '도', 'bytes': [235, 143, 132], 'logprob': -5.5122365e-07, 'top_logprobs': []}, {'token': '는', 'bytes': [235, 138, 148], 'logprob': -1.9361265e-07, 'top_logprobs': []}, {'token': ' 서', 'bytes': [32, 236, 132, 156], 'logprob': -3.2929079e-06, 'top_logprobs': []}, {'token': '\\\\xec\\\\x9a', 'bytes': [236, 154], 'logprob': 0.0, 'top_logprobs': []}, {'token': '\\\\xb8', 'bytes': [184], 'logprob': 0.0, 'top_logprobs': []}, {'token': '입니다', 'bytes': [236, 158, 133, 235, 139, 136, 235, 139, 164], 'logprob': -0.15018621, 'top_logprobs': []}, {'token': '.', 'bytes': [46], 'logprob': -2.220075e-06, 'top_logprobs': []}], 'refusal': None}}, id='run-e3f98d2a-4e52-4977-b37f-db6dee7107c7-0', usage_metadata={'input_tokens': 24, 'output_tokens': 15, 'total_tokens': 39})"
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,12 +313,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-20T06:55:12.831912Z",
-     "start_time": "2024-09-20T06:55:12.826236Z"
+     "end_time": "2024-09-22T01:19:02.616697300Z",
+     "start_time": "2024-09-22T01:19:02.608569100Z"
     }
    },
    "id": "21a7143a56f9ad27",
-   "execution_count": 29
+   "execution_count": 10
   },
   {
    "cell_type": "code",
