--- a/01-Basic/03-LCEL.Ipynb
+++ b/01-Basic/03-LCEL.Ipynb
@@ -14,8 +14,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:33:29.870993Z",
-     "start_time": "2024-09-20T07:33:29.852045Z"
+     "end_time": "2024-09-22T01:30:18.497462Z",
+     "start_time": "2024-09-22T01:30:18.469049500Z"
     }
    },
    "outputs": [
@@ -41,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:33:29.880674Z",
-     "start_time": "2024-09-20T07:33:29.873202Z"
+     "end_time": "2024-09-22T01:30:19.504432700Z",
+     "start_time": "2024-09-22T01:30:19.472781100Z"
     }
    },
    "outputs": [
@@ -88,8 +88,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:33:31.697162Z",
-     "start_time": "2024-09-20T07:33:30.463470Z"
+     "end_time": "2024-09-22T01:32:53.454615Z",
+     "start_time": "2024-09-22T01:32:51.954186800Z"
     }
    },
    "outputs": [],
@@ -107,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:37:39.593177Z",
-     "start_time": "2024-09-20T07:37:39.586880Z"
+     "end_time": "2024-09-22T01:33:35.962540900Z",
+     "start_time": "2024-09-22T01:33:35.931100700Z"
     }
    },
    "outputs": [
@@ -119,7 +119,7 @@
      "data": {
       "text/plain": "PromptTemplate(input_variables=['country'], template='{country}의 수도는 어디인가요?')"
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
      "data": {
       "text/plain": "PromptTemplate(input_variables=['country', 'query'], template='{country}의 {query}은(는) 어디인가요?')"
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,11 +206,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:48:05.779301Z",
-     "start_time": "2024-09-20T07:48:05.773508Z"
+     "end_time": "2024-09-22T01:34:14.161329200Z",
+     "start_time": "2024-09-22T01:34:14.145329Z"
     }
    },
-   "execution_count": 21
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -219,32 +219,32 @@
      "data": {
       "text/plain": "'한국의 가장 큰 댐은(는) 어디인가요?'"
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prompt = prompt_template.format(country='한국').format(query='가장 큰 댐')\n",
-    "# prompt = prompt_template.format(country='한국', query='가장 큰 댐')\n",
+    "# prompt = prompt_template.format(country='한국').format(query='가장 큰 댐')\n",
+    "prompt = prompt_template.format(country='한국', query='가장 큰 댐')\n",
     "prompt"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:48:25.995422Z",
-     "start_time": "2024-09-20T07:48:25.989662Z"
+     "end_time": "2024-09-22T01:34:53.990445300Z",
+     "start_time": "2024-09-22T01:34:53.958966100Z"
     }
    },
-   "execution_count": 24
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:48:31.326388Z",
-     "start_time": "2024-09-20T07:48:30.839888Z"
+     "end_time": "2024-09-22T01:35:04.964598100Z",
+     "start_time": "2024-09-22T01:35:04.078521900Z"
     }
    },
    "outputs": [],
@@ -281,11 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:49:58.575489Z",
-     "start_time": "2024-09-20T07:49:58.096330Z"
+     "end_time": "2024-09-22T01:37:14.586112800Z",
+     "start_time": "2024-09-22T01:37:14.112441600Z"
     }
    },
    "outputs": [],
@@ -312,11 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:50:27.662025Z",
-     "start_time": "2024-09-20T07:50:27.658136Z"
+     "end_time": "2024-09-22T01:37:35.704685400Z",
+     "start_time": "2024-09-22T01:37:35.704685400Z"
     }
    },
    "outputs": [],
@@ -328,19 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:50:32.665765Z",
-     "start_time": "2024-09-20T07:50:30.638761Z"
+     "end_time": "2024-09-22T01:37:54.892485900Z",
+     "start_time": "2024-09-22T01:37:53.451135Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "AIMessage(content='한국의 가장 큰 댐은 현재 소방댐으로 알려진 무학댐이 가장 큰 댐으로 알려져 있습니다. 무학댐은 경상북도 영덕군에 위치하고 있으며, 한반도에서 가장 큰 다목적 댐으로서 홍수피해 방지와 농업용수 공급 등 다양한 목적으로 사용되고 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 132, 'prompt_tokens': 29, 'total_tokens': 161, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-55306da0-882f-40cd-b9f1-f4efe554ed2c-0', usage_metadata={'input_tokens': 29, 'output_tokens': 132, 'total_tokens': 161})"
+      "text/plain": "AIMessage(content='한국의 가장 큰 댐은 충북 지역에 위치한 충주댐입니다. 충주댐은 남한강에 건설된 댐으로, 총 보상량은 1,240억m³에 이르며 한반도에서 가장 큰 댐 중 하나입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 92, 'prompt_tokens': 29, 'total_tokens': 121, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-0f8ad5eb-bcee-42e5-b8af-a0b10ace367b-0', usage_metadata={'input_tokens': 29, 'output_tokens': 92, 'total_tokens': 121})"
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:54:38.101563Z",
-     "start_time": "2024-09-20T07:54:38.097551Z"
+     "end_time": "2024-09-22T01:39:57.790870400Z",
+     "start_time": "2024-09-22T01:39:57.777730600Z"
     }
    },
    "outputs": [],
@@ -402,11 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T07:54:39.586094Z",
-     "start_time": "2024-09-20T07:54:39.582066Z"
+     "end_time": "2024-09-22T01:40:02.617513300Z",
+     "start_time": "2024-09-22T01:40:02.611035600Z"
     }
    },
    "outputs": [],
@@ -417,39 +417,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-20T08:02:36.255610Z",
-     "start_time": "2024-09-20T08:01:13.228759Z"
+     "end_time": "2024-09-22T01:40:05.524736700Z",
+     "start_time": "2024-09-22T01:40:03.967580300Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "'한국의 가장 큰 댐은 용암댐입니다.용암댐은 경상북도 영주에 위치하고 있으며, 한강을 감당하기 위해 건설되었습니다. 현재 한국에서 가장 큰 댐으로 용량이 2억톤을 넘는 대형 다목적 댐입니다.'"
+      "text/plain": "'한국의 가장 큰 댐은 충청북도 청주시에 위치한 충주댐입니다. 충주댐은 한강의 지류인 충주호를 만들기 위해 건설된 대형 댐으로, 한국에서 가장 큰 댐으로 알려져 있습니다.'"
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "File \u001B[1;32mC:\\Program Files\\JetBrains\\PyCharm 2023.3.4\\plugins\\python\\helpers\\pydev\\_pydevd_bundle\\pydevd_trace_dispatch.py:92\u001B[0m, in \u001B[0;36mtrace_dispatch\u001B[1;34m(py_db, frame, event, arg)\u001B[0m\n\u001B[0;32m     90\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m _trace_dispatch \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m     91\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m---> 92\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_trace_dispatch\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpy_db\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1337\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1597\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.ThreadTracer.__call__\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1103\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1065\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:585\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32mC:\\Program Files\\JetBrains\\PyCharm 2023.3.4\\plugins\\python\\helpers\\pydev\\pydevd.py:1184\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1181\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1183\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1184\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\Program Files\\JetBrains\\PyCharm 2023.3.4\\plugins\\python\\helpers\\pydev\\pydevd.py:1199\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1196\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1198\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1199\u001B[0m         time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m0.01\u001B[39m)\n\u001B[0;32m   1201\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1203\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
-     ]
     }
    ],
    "source": [
@@ -483,8 +465,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:41:31.337938500Z",
+     "start_time": "2024-09-22T01:41:30.694337200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "template = \"\"\"\n",
@@ -511,8 +498,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:41:36.893563400Z",
+     "start_time": "2024-09-22T01:41:36.891745800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 체인을 구성합니다.\n",
@@ -521,9 +513,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:41:49.672390100Z",
+     "start_time": "2024-09-22T01:41:48.691961900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 영어 회화: Excuse me, I would like to order some food.\n",
+      "- 한글 해석: 실례합니다, 음식을 주문하려고 합니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 완성된 Chain을 실행하여 답변을 얻습니다.\n",
     "print(chain.invoke({\"question\": \"저는 식당에 가서 음식을 주문하고 싶어요\"}))"
