--- a/01-Basic/04-LCEL-Advanced.ipynb
+++ b/01-Basic/04-LCEL-Advanced.ipynb
@@ -34,10 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b5a5ffc2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:46:20.902517600Z",
+     "start_time": "2024-09-22T01:46:20.857362300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -48,10 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a4ccea96",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:46:20.904540700Z",
+     "start_time": "2024-09-22T01:46:20.893139200Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
