--- a/04-Model/05-Google-Generative-AI.ipynb
+++ b/04-Model/05-Google-Generative-AI.ipynb
@@ -12,9 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5aa0991",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-26T15:13:36.410884600Z",
+     "start_time": "2024-09-26T15:13:36.407230500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# !pip install -qU langchain-google-genai"
@@ -33,10 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c66ce72",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-26T15:14:15.568699900Z",
+     "start_time": "2024-09-26T15:14:15.547578300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -45,10 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "39e009a2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-26T15:14:16.971050300Z",
+     "start_time": "2024-09-26T15:14:16.449981600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH04-Models\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install langchain-teddynote\n",
@@ -82,10 +116,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "588610e5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-26T15:14:22.765134600Z",
+     "start_time": "2024-09-26T15:14:21.067927600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Gemini produced an empty response. Continuing with empty message\n",
+      "Feedback: \n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "\n",
@@ -101,10 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d4b53238",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-26T15:14:28.142380Z",
+     "start_time": "2024-09-26T15:14:27.390740300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "네.  \n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "\n",
