--- a/01-Basic/05-Runnable.ipynb
+++ b/01-Basic/05-Runnable.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:39:44.582763100Z",
-     "start_time": "2024-09-21T05:39:44.551194700Z"
+     "end_time": "2024-09-22T01:58:12.543278700Z",
+     "start_time": "2024-09-22T01:58:12.396373300Z"
     }
    },
    "outputs": [
@@ -14,7 +14,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:39:47.093951200Z",
-     "start_time": "2024-09-21T05:39:47.076128600Z"
+     "end_time": "2024-09-22T01:58:12.572923800Z",
+     "start_time": "2024-09-22T01:58:12.412044400Z"
     }
    },
    "outputs": [
@@ -79,8 +79,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:43:37.500724700Z",
-     "start_time": "2024-09-21T05:43:37.059671700Z"
+     "end_time": "2024-09-22T01:58:14.679394Z",
+     "start_time": "2024-09-22T01:58:12.419093600Z"
     }
    },
    "outputs": [],
@@ -109,14 +109,14 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:43:45.561389400Z",
-     "start_time": "2024-09-21T05:43:44.865473900Z"
+     "end_time": "2024-09-22T01:58:15.163118300Z",
+     "start_time": "2024-09-22T01:58:14.679394Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "AIMessage(content='50', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1, 'prompt_tokens': 16, 'total_tokens': 17, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-e6b3acb1-b681-4abf-8c7f-6bd14e2ec230-0', usage_metadata={'input_tokens': 16, 'output_tokens': 1, 'total_tokens': 17})"
+      "text/plain": "AIMessage(content='50입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 16, 'total_tokens': 19, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-a678a5aa-cf89-4edc-94e8-6dddff71402a-0', usage_metadata={'input_tokens': 16, 'output_tokens': 3, 'total_tokens': 19})"
      },
      "execution_count": 5,
      "metadata": {},
@@ -137,9 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:58:15.584090800Z",
+     "start_time": "2024-09-22T01:58:15.163118300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='50입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 16, 'total_tokens': 19, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-90167663-d64b-4de8-a086-a5d716298233-0', usage_metadata={'input_tokens': 16, 'output_tokens': 3, 'total_tokens': 19})"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain 을 실행합니다.\n",
     "chain.invoke(5)"
@@ -156,11 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:53:48.139151900Z",
-     "start_time": "2024-09-21T05:53:48.123330400Z"
+     "end_time": "2024-09-22T01:58:15.599601800Z",
+     "start_time": "2024-09-22T01:58:15.584090800Z"
     }
    },
    "outputs": [
@@ -168,7 +182,7 @@
      "data": {
       "text/plain": "{'num': 10}"
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,14 +206,14 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:57:40.559814300Z",
-     "start_time": "2024-09-21T05:57:39.649860400Z"
+     "end_time": "2024-09-22T01:58:17.012350100Z",
+     "start_time": "2024-09-22T01:58:15.599601800Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "AIMessage(content='100입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 16, 'total_tokens': 19, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-863e1d8a-efcb-4481-9cf0-2f19b77e2d67-0', usage_metadata={'input_tokens': 16, 'output_tokens': 3, 'total_tokens': 19})"
+      "text/plain": "AIMessage(content='100 입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 4, 'prompt_tokens': 16, 'total_tokens': 20, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-bbabeccd-f79f-4242-9167-397149906149-0', usage_metadata={'input_tokens': 16, 'output_tokens': 4, 'total_tokens': 20})"
      },
      "execution_count": 8,
      "metadata": {},
@@ -225,8 +239,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T05:57:59.601181400Z",
-     "start_time": "2024-09-21T05:57:59.585461600Z"
+     "end_time": "2024-09-22T01:58:17.028325600Z",
+     "start_time": "2024-09-22T01:58:17.012350100Z"
     }
    },
    "outputs": [
@@ -254,9 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-22T01:58:17.106948200Z",
+     "start_time": "2024-09-22T01:58:17.028325600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'num': 1, 'new_num': 3}"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 입력 키: num, 할당(assign) 키: new_num\n",
     "(RunnablePassthrough.assign(new_num=lambda x: x[\"num\"] * 3)).invoke({\"num\": 1})"
@@ -437,11 +465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-21T06:11:53.159271900Z",
-     "start_time": "2024-09-21T06:11:52.644523100Z"
+     "end_time": "2024-09-22T02:05:20.844908600Z",
+     "start_time": "2024-09-22T02:05:20.198037100Z"
     }
    },
    "outputs": [],
@@ -476,8 +504,7 @@
     "chain = (\n",
     "    {\n",
     "        \"a\": itemgetter(\"word1\") | RunnableLambda(length_function),\n",
-    "        \"b\": {\"text1\": itemgetter(\"word1\"), \"text2\": itemgetter(\"word2\")}\n",
-    "        | RunnableLambda(multiple_length_function),\n",
+    "        \"b\": {\"text1\": itemgetter(\"word1\"), \"text2\": itemgetter(\"word2\")} | RunnableLambda(multiple_length_function),\n",
     "    }\n",
     "    | prompt\n",
     "    | model\n",
@@ -486,26 +513,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
       "text/plain": "'good day'"
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "word = {\"word1\" : \"good day\"}\n",
-    "itemgetter(\"word1\")(word)"
+    "itemgetter(\"word1\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-21T06:19:38.610179300Z",
-     "start_time": "2024-09-21T06:19:38.604533100Z"
+     "end_time": "2024-09-22T02:07:03.906100500Z",
+     "start_time": "2024-09-22T02:07:03.892011200Z"
     }
    }
   },
